--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "@types/react-dom": "^18.0.6",
     "@vitejs/plugin-react": "^2.1.0",
     "babel-loader": "^8.2.5",
+    "chromatic": "^6.11.4",
     "typescript": "^4.6.4",
     "vite": "^3.1.0"
   }
